--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "npx tsm ./src/app.ts",
+    "dev": "npx tsm app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
